--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Dale Mellor <dale_mellor@users.sourceforge.net>
 Mathieu Lirzin <mthl@gnu.org>
 Sergey Poznyakoff <cray@gnu.org.ua>
+Ludovic Courtès <ludo@gnu.org>
