--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 GNU Mcron NEWS                                    -*- outline -*-
 
-* Noteworthy changes in release ?.? (????-??-??) [?]
+* Noteworthy changes in release 1.1 (2018-03-19) [stable]
 
 ** New features
 
