--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 GNU Mcron NEWS                                    -*- outline -*-
 
+* Noteworthy changes in release ?.? (????-??-??) [?]
+
+
 * Noteworthy changes in release 1.1 (2018-03-19) [stable]
 
 ** New features
