build: Reverse '--disable-multi-user' effect
This fixes a bug where the '--disable-multi-user' was actually having the
reverse effect of installing 'cron' and 'crontab'.

* configure.ac: Reverse equality test when setting 'MULTI_USER' Automake
conditional.

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@ GNU Mcron NEWS                                    -*- outline -*-
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+** Bug fixes
+
+  The "--disable-multi-user" configure variable is not reversed anymore.
+  'cron' and 'crontab' are now installed unless this option is used.
 
 * Noteworthy changes in release 1.1 (2018-03-19) [stable]
 
