build: Properly set Guile load paths in programs
This fixes an issue where the installed Guile load paths were set by the
undefined 'moduledir' Make macro.

* Makefile.am (AM_CPPFLAGS): Define PACKAGE_LOAD_PATH with
'guilesitedir' macro and PACKAGE_LOAD_COMPILED_PATH with
'guilesitegodir'.
* NEWS: Update.

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,9 @@ GNU Mcron NEWS                                    -*- outline -*-
   The "--disable-multi-user" configure variable is not reversed anymore.
   'cron' and 'crontab' are now installed unless this option is used.
 
+  The programs now sets the GUILE_LOAD_PATH and GUILE_LOAD_COMPILED_PATH
+  environment variables with the location of the installed Guile modules.
+
 * Noteworthy changes in release 1.1 (2018-03-19) [stable]
 
 ** New features
