utils: Use 'scandir' instead of custom 'for-each-file'
* src/mcron/utils.scm (for-each-file): Delete.
* src/mcron/scripts/cron.scm (process-files-in-system-directory): Use
'scandir' which has the benefit of being deterministic.
* src/mcron/scripts/mcron.scm (process-files-in-user-directory):
Likewise.
* tests/schedule.sh: Update expected output which is now more reliable.
* NEWS: Update.

Suggested-by: Ludovic Courtès <ludo@gnu.org>

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,8 @@ GNU Mcron NEWS                                    -*- outline -*-
   Some basic tests for the installed programs can be run after 'make install'
   with 'make installcheck'.
 
+  The configuration files are now processed using a deterministic order.
+
 * Noteworthy changes in release 1.1 (2018-03-19) [stable]
 
 ** New features
