--- a/NEWS
+++ b/NEWS
@@ -144,7 +144,7 @@ GNU Mcron NEWS                                    -*- outline -*-
 ========================================================================
 
 Copyright © 2003, 2005, 2006 Dale Mellor <dale_mellor@users.sourceforge.net>
-Copyright © 2017 Mathieu Lirzin <mthl@gnu.org>
+Copyright © 2017, 2018 Mathieu Lirzin <mthl@gnu.org>
 
 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
