maint: Replace "build-aux/gnu-fetch" with 'fetch' maintainer rule
Fetching third-party files inside a make rule is convenient and less
error prone since 'make' has access to '$srcdir'.

* build-aux/gnu-fetch: Delete.
* maint.mk (WGET, git_sv_host, sv_git_am, sv_git_gl)
(fetchfiles): New macros.
(fetch): New target.
* HACKING <Updating auxilary scripts>: Update instructions.

--- a/HACKING
+++ b/HACKING
@@ -55,7 +55,7 @@ follows.
 * Updating auxilary scripts
 
   Fetch new versions of the files that are maintained in other GNU
-  repositories by running "cd build-aux; ./gnu-fetch".  In case any file in the
+  repositories by running "make fetch".  In case any file in the
   Mcron repository has been updated, commit and re-run the testsuite.
 
 * Code coverage
