job-specifier: Adapt 'bump-time' to 'next-...-from' procedures
This is a follow-up to commit 913e3c65e4f56476e8ac69f4892cf92c125751ec.

Since 'next-...-from' procedures now uses an '#:optional' argument
instead of a dotted optional arguments list, 'bump-time' doesn't need to
unwrap VALUE-LIST anymore.

* src/mcron/job-specifier.scm (bump-time): Pass VALUE-LIST directly to
'%find-best-next'.
* tests/job-specifier.scm ("next-hour-from"): New test.
* NEWS: Update.

Reported-by: Ludovic Courtès <ludo@gnu.org>

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,12 @@ GNU Mcron NEWS                                    -*- outline -*-
   The programs now sets the GUILE_LOAD_PATH and GUILE_LOAD_COMPILED_PATH
   environment variables with the location of the installed Guile modules.
 
+  'next-year-from', 'next-year', 'next-month-from', 'next-month',
+  'next-day-from', 'next-day', 'next-hour-from', 'next-hour',
+  'next-minute-from', 'next-minute', 'next-second-from', and 'next-second' no
+  longer crashes when passing an optional arguments.
+  [bug introduced in mcron-1.1]
+
 ** Improvements
 
   Some basic tests for the installed programs can be run after 'make install'
