--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 GNU Mcron NEWS                                    -*- outline -*-
 
-* Noteworthy changes in release ?.? (????-??-??) [?]
+* Noteworthy changes in release 1.1.1 (2018-04-08) [stable]
 
 ** Bug fixes
 
