maint: Add 宋文武 to the authors
* AUTHORS: Add 宋文武.

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@ Dale Mellor <dale_mellor@users.sourceforge.net>
 Mathieu Lirzin <mthl@gnu.org>
 Sergey Poznyakoff <cray@gnu.org.ua>
 Ludovic Courtès <ludo@gnu.org>
+宋文武 <iyzsong@member.fsf.org>
