--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 GNU Mcron NEWS                                    -*- outline -*-
 
-* Noteworthy changes in release ?.? (????-??-??) [?]
+* Noteworthy changes in release 1.1.2 (2018-11-26) [stable]
 
 ** Improvements
 
