maint: Add Efraim Flashner to the authors
* AUTHORS: Add Efraim Flashner.

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@ Mathieu Lirzin <mthl@gnu.org>
 Sergey Poznyakoff <cray@gnu.org.ua>
 Ludovic Courtès <ludo@gnu.org>
 宋文武 <iyzsong@member.fsf.org>
+Efraim Flashner <efraim@flashner.co.il>
