Updated my e-mail address.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Dale Mellor <dale_mellor@users.sourceforge.net>
+Dale Mellor <mcron-lsfnyl@rdmp.org>
 Mathieu Lirzin <mthl@gnu.org>
 Sergey Poznyakoff <cray@gnu.org.ua>
 Ludovic Courtès <ludo@gnu.org>
